// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <p>
        No expenses
      </p>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div>
      <ExpenseListItem
        amount={195}
        createdAt={0}
        description="gum"
        id="1"
        key="1"
        note=""
      />
      <ExpenseListItem
        amount={373}
        createdAt={-345600000}
        description="coffie"
        id="2"
        key="2"
        note=""
      />
      <ExpenseListItem
        amount={1959}
        createdAt={345600000}
        description="rent"
        id="3"
        key="3"
        note=""
      />
    </div>
  </div>
</div>
`;
